# proueb_2025

./: .gitignore  Readme.md  pyproject.toml
src/: load_data.py  sort.py
